--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,9 @@
+body{
+  background-image: url("../images/burgeryum.png");
+  background-repeat: repeat;
+  background-size: 100px 100px;
+}
+
 li {
   padding: 5px;
   margin: 5px;
@@ -16,4 +22,24 @@ li {
 
 .form-group {
   margin-bottom: 5px;
+}
+
+#leftside {
+  background-color: #5c5c5c;
+  color: white;
+  text-align: center;
+  font-size: 1.3em;
+  float: left;
+  height:50%;
+  width:50%;
+}
+
+#rightside {
+  background-color: #e49322;
+  color: white;
+  text-align: center;
+  font-size: 1.3em;
+  float:right;
+  height:50%;
+  width:50%;
 }
