--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
 <div class="background">
 <h1>EAT-DA-BURGER!</h1>
 <iframe src="https://giphy.com/embed/26gJyPArz29MiOYSI" width="100%" height="70%"></iframe>
-  <div>
+
+  <div class="new-burger">
 
     <input type="text" id="burger">
     <button id="addBurger">new burger</button>
