--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,10 @@
 <div class="background">
 <h1>EAT-DA-BURGER!</h1>
 <iframe src="https://giphy.com/embed/26gJyPArz29MiOYSI" width="100%" height="70%"></iframe>
-
   <div class="new-burger">
 
     <input type="text" id="burger">
-    <button id="addBurger">new burger</button>
+    <button id="addBurger">Yummy!!!New Burger</button>
   </div>
 
 
@@ -13,7 +12,7 @@
   <div class="row">
     <div class="col-sm-6">
       <div id="leftside">
-        <h2>Burgers!</h2>
+        <h2>BURGERS!</h2>
 
         <ul>
           {{#each burgers}}
@@ -30,7 +29,7 @@
 
 <div class="col-sm-6">
   <div id="rightside">
-    <h2>Burgers that have been devoured!</h2>
+    <h2>DEVOURED BURGERS!</h2>
 
     <ul>
       {{#each burgers}}
